--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,26 +6,26 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #015b93;
+  --ifm-color-primary-dark: #015284;
+  --ifm-color-primary-darker: #014d7d;
+  --ifm-color-primary-darkest: #014067;
+  --ifm-color-primary-light: #0164a2;
+  --ifm-color-primary-lighter: #0169a9;
+  --ifm-color-primary-lightest: #0176bf;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #56ace1;
+  --ifm-color-primary-dark: #3c9fdc;
+  --ifm-color-primary-darker: #2e99da;
+  --ifm-color-primary-darkest: #217fb9;
+  --ifm-color-primary-light: #70b9e6;
+  --ifm-color-primary-lighter: #7ebfe8;
+  --ifm-color-primary-lightest: #a5d3ef;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
